<resources>
    <string name="app_name">Find daMatch</string>
    <string name="btnSkip_txt">skip</string>
    <string name="welcome_page_title">Welcome Page</string>
    <string name="scoreboard_menu_title">Score Board</string>
    <string name="btnSettings_txt">Settings</string>
    <string name="btnStartGame_txt">Start Game</string>
    <string name="btnHelp_txt">Help</string>
    <string name="help_activity_title">Help</string>
    <string name="settings_activity_title">Settings</string>
    <string name="best_scores_activity_title">Best Scores</string>
    <string name="main_menu_activity_title">Main Menu</string>
    <string name="game_page_title">Game Page</string>
    <string name="BtnBestScores_txt">Best Scores</string>

    <string name="BestScore1Name">Bob</string>
    <string name="BestScore2Name">Tom</string>
    <string name="BestScore3Name">Jerry</string>
    <string name="BestScore4Name">Batman</string>
    <string name="BestScore5Name">Robin</string>
    <string name="BestScore6Name">Score6</string>

    <string name="BestScore1Date">Wed, July 1</string>
    <string name="BestScore2Date">Thurs, July 2</string>
    <string name="BestScore3Date">Fri, July 3</string>
    <string name="BestScore4Date">Sat, July 4</string>
    <string name="BestScore5Date">Sun, July 5</string>
    <string name="BestScore6Date">Score 6</string>

    <string name="BestScore1Time">20 Secs</string>
    <string name="BestScore2Time">40 Secs</string>
    <string name="BestScore3Time">50 Secs</string>
    <string name="BestScore4Time">1 Min</string>
    <string name="BestScore5Time">1 Min 30 Secs</string>

    <string name="Score1Pos">1</string>
    <string name="Score2Pos">2</string>
    <string name="Score3Pos">3</string>
    <string name="Score4Pos">4</string>
    <string name="Score5Pos">5</string>

    <string name="ScoreTableDateTitle">Date</string>
    <string name="ScoreTablePosTitle">Pos</string>
    <string name="ScoreTableScoreTitle">Name</string>
    <string name="ScoreTableTimeTitle">Time</string>

    <string name="TimeMins">"%1$d:%2$d"</string>
    <string name="TimeSecs">"%1$d:0%2$d"</string>

    <string name="SaveBtn">Save</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="reset_score">Reset Score</string>
    <string name="your_score">Your Score:</string>
    <string name="nickname_msg">You Must Enter a Nickname</string>
    <string name="back_arrow_vector_image">Back Arrow Vector Image</string>

    <string name="time_game_activity">Time:</string>
    <string name="null_text_view">TextView</string>
    <string name="game_activity_reset">Shuffle</string>
    <string name="game_activity_export">Export</string>
    <string name="activity_main_export">Export</string>
    <string name="activity_settings_western_conference">NBA and WNBA Pros</string>
    <string name="activity_settings_eastern_conference">NCAA Collegiate</string>
    <string name="activity_settings_choose_image_set">Image set:</string>
    <string name="activity_settings_apply">Apply</string>
    <string name="backBtnArrow">backBtnArrow</string>
    <string name="imgView_logowitnobball">logoWitNoBBall</string>

    <string name="helpView">
        <h><b>Game Objective:</b></h>\n
        <p>Finish the game in the least amount of time to get a\n chance to be enshrined in the score hall of fame.</p>\n\n\n
        <h1><b>How to play:</b></h1>\n
        <p>There is only 1 identical logo for any pair of\n cards.\n\n There are 2
            sets of logos: NBA and WNBA\n or NCAA, each of them contains a user selected amount of logos. You can\n select either one from the settings menu.\n\n Each round, 2 cards will be randomly drawn, spot the\n identical
            logo and tap it on the bottom card as fast as\n possible. \n\nIn order to satisfy the game objective, you must spot all logos in the deck.</p>\n\n\n
        <h2><b>Images Resources:</b></h2>\n
        <p>All the logos can be found through Wikipedia.\n
        <a href="https://en.wikipedia.org/wiki/Toronto_Raptors#/media/File:Toronto_Raptors_logo.svg">For example the logo of the Toronto Raptors.</a>\n\n
        Other images used in making the application:\n
        <a href="https://www.freepik.com/free-vector/basket-ball-background_715720.htm#page=1&amp;query=basketball&amp;position=12">Image 1</a>\n
        <a href="https://www.freepik.com/free-vector/abstract-background-basketball-player_1075929.htm#page=2&amp;query=background+abstract+sport&amp;position=36">Image 2</a>\n
        <a href="https://www.freepik.com/free-vector/basketball-player-made-dots_716443.htm#page=2&amp;query=playing+basketball&amp;position=7">Image 3</a></p>\n\n
        Sounds used in making the application:\n
        <a href="https://freesound.org/people/Kastenfrosch/sounds/521973/">Sound 1</a>\n
        <a href="https://www.fesliyanstudios.com/sound-effects-search.php?q=game">Sound 2</a>\n
        <a href="https://www.freesfx.co.uk/sfx/referee-whistle">Sound 3</a>\n
        <a href="https://www.freesfx.co.uk/sfx/clapping">Sound 4</a>\n
        \n\n
        <b>This game was created by Alex, Ard, Ali, and Percy.</b>
    </string>
    <string name="names">By:\nAlex, Ali\nArd, Percy</string>
    <string name="image_logo">logo</string>
    <string name="activity_settings_custom">Custom</string>
    <string name="activity_settings_game_order">Images per Card:</string>
    <string name="activity_settings_order_choice0">3</string>
    <string name="activity_settings_order_choice1">4</string>
    <string name="activity_settings_order_choice2">6</string>
    <string name="activity_settings_game_size">Cards per Deck:</string>
    <string name="activity_settings_size_choice0">5</string>
    <string name="activity_settings_size_choice1">10</string>
    <string name="activity_settings_size_choice2">15</string>
    <string name="activity_settings_size_choice3">20</string>
    <string name="activity_settings_size_choice4">All</string>
    <string name="activity_settings_text_true">Text</string>
    <string name="activity_settings_text_false">No Text</string>
    <string name="acticity_settings_text_or_no_text">Text</string>
    <string name="invalid_settings">Invalid Settings</string>
    <string name="not_enough_images">Not Enough Images</string>
    <string name="custom_images_btn_txt">Customize</string>

    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="custom_image_set_toolbar_title">Custom Image Set</string>
    <string name="back_btn">Back</string>
    <string name="game_mode">Game Mode: </string>
    <string name="selected_game_mode"> Num of Images: %d | Num of Cards: %d | %s</string>
    <string name="true_value">true</string>
    <string name="flickr_ImageSet_can_not_have_Text">Flickr ImageSet can not have Text</string>
    <string name="invalid_game_mode_selected">Invalid Game Mode Selected</string>
    <string name="spinner_prompt_title">Select Game Mode:</string>
    <string name="with_text">With Text</string>
    <string name="without_text">Without Text</string>
    <string name="btn_add_flickr_images">Add Flickr Images</string>
    <string name="btn_add_custom_images">Add Custom Images</string>
    <string name="dialog_box_title">Best Scores</string>
    <string name="save">Save</string>
    <string name="no_nickname_toast">No Nickname: Score not Saved</string>
    <string name="activity_settings_difficulty">Difficulty:</string>
    <string name="activity_settings_easy">Easy</string>
    <string name="activity_settings_medium">Medium</string>
    <string name="activity_settings_hard">Hard</string>
    <string name="previous_permission_check">Images stored in
        /Images/Pictures</string>
    <string name="permission_needed">Permission needed</string>
    <string name="external_storage_request_message">Permission to write to EXTERNAL STORAGE is needed to export card image to filesystem</string>
    <string name="request_permission_ok">OK</string>
    <string name="request_permission_nope">NOPE</string>
    <string name="request_permission_granted">Images stored in
        /Images/Pictures</string>
    <string name="request_permission_denied">Permission Denied</string>

</resources>