<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoresActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <include
        android:id="@+id/ScoresMenuToolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineScores"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/ScoreTablePosTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/ScoreTablePosTitle"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ScoreTableScoreTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/ScoreTableScoreTitle" />

            <TextView
                android:id="@+id/ScoreTableTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/ScoreTableTimeTitle" />

            <TextView
                android:id="@+id/ScoreTableDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/ScoreTableDateTitle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/Score1Pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/Score1Pos"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Score1Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="center"
                android:text="@string/BestScore1Name" />

            <TextView
                android:id="@+id/Score1Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="center"
                android:text="@string/BestScore1Time" />

            <TextView
                android:id="@+id/Score1Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="center"
                android:text="@string/BestScore1Date" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/Score2Pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/Score2Pos"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Score2Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore2Name" />

            <TextView
                android:id="@+id/Score2Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore2Time" />

            <TextView
                android:id="@+id/Score2Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore2Date" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/Score3Pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/Score3Pos"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Score3Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore3Name" />

            <TextView
                android:id="@+id/Score3Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore3Time" />

            <TextView
                android:id="@+id/Score3Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore3Date" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/Score4Pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/Score4Pos"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Score4Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore4Name" />

            <TextView
                android:id="@+id/Score4Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore4Time" />

            <TextView
                android:id="@+id/Score4Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore4Date" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/Score5Pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/Score5Pos"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Score5Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore5Name" />

            <TextView
                android:id="@+id/Score5Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore5Time" />

            <TextView
                android:id="@+id/Score5Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/BestScore5Date" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="48dp"
        android:text="@string/reset_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>